finished background corrections

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -153,6 +153,13 @@ note = {e3323 IJCS-16-0515.R1},
   howpublished = {\url{https://kaikreuzer.blogspot.com.ee/2014/02/privacy-in-smart-home-why-we-need.html}}
 }
 
+@misc{openhab_04,
+  author = {The openHAB Community and the openHAB Foundation e.V.},
+  title = {Securing access to openHAB},
+  note = {Access date: 2018-05-16},
+  howpublished = {\url{https://docs.openhab.org/installation/security.html}}
+}
+
 @article{esh_01,
 title = "Just a Smart Home or Your Smart Home – A Framework for Personalized User Interfaces Based on Eclipse Smart Home and Universal Remote Console",
 journal = "Procedia Computer Science",
