--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -466,7 +466,7 @@ A servlet is special Java class used to extend a web server by providing dynamic
 
 Traditional web applications in Java require a container, such as Tomcat or Jetty, where the servlet is published, so that it can be accessed through HTTP. Java servlets make use of an application deployment descriptor, more widely known as the \texttt{web.xml} file. This configuration file specifies to which URL it is mapped to. Thus, when a \texttt{GET} request arrives at that URL, for instance, it is redirected to the correct method.
 
-In the OSGi framework however, this deployement descriptor, i.e. \texttt{web.xml}, does not exist. Just as a bundle has to be registered to the runtime, the servlet, and its respective HTTP response methods also have to be registered to it. Two mechanisms to perform this registration are the \texttt{Http Service} and \texttt{Http Whiteboard}, and as part of these, the \texttt{Http Context}.
+In the OSGi framework however, this deployement descriptor, i.e.\ \texttt{web.xml}, does not exist. Just as a bundle has to be registered to the runtime, the servlet, and its respective HTTP response methods also have to be registered to it. Two mechanisms to perform this registration are the \texttt{Http Service} and \texttt{Http Whiteboard}, and as part of these, the \texttt{Http Context}.
 
 \paragraph{Http Service.} As an interface of the \texttt{org.osgi.service.http} package, it is used to allow other bundles in the OSGi runtime to dynamically register resources, servlets, and filters into the URI namespace of the Http Service. As the Http Service is not always available, a \texttt{ServiceTracker} object is used to check its availability during registration~\cite{httpservice}.
 
@@ -588,22 +588,20 @@ Authentication protects against Man-in-the-Middle attacks, and active attacks in
 \item[Authentication by gateway] Gateway takes care of running the authentication mechanisms on behalf of each of the sensor nodes in its WSN. The gateway becomes the central point of operation for authentication. As such, traffic congestion should also be considered.
 \item[Authentication by security token] When two remote nodes want to communicate with each other, the gateway prepares a security token (e.g.\ a cookie) with certain security properties. The end points can then authenticate each other by using this token, which may have an expiration time. 
 \item[Authentication by Trust Chain] Follows the approach used in public key infrastructure, meaning that public certificates (X.509) are used along with public-key algorithms to achieve authentication. This method may be expensive, both computationally and economically.
-\item[Authentication by Global Trust Tree] The idea is that a single central authority oversees authentication between nodes in any IoT that it has access to. This approach is purely theoretical, and there are no candidates for it yet.
+\item[Authentication by Global Trust Tree] Single central authority oversees authentication between nodes in any IoT that it has access to. This approach is purely theoretical, and there are no candidates for it yet.
 \end{description}
 
 \subsection{Eclipse SmartHome and openHAB}
 
-The smart home is one of the many applications for the IoT. A refrigerator that sends an message to your phone when it no longer has any milk. An air conditioner that turns on whenever the it learns that the outside temperature is rising above thirty Celsius degrees. A speaker that plays music whenever you start cooking. These are just some of the possible scenarios that may occur inside a home with \emph{sensing} devices that are capable of interacting with each other. This is no longer a vision for the future or a secluded experiment. There are already several existing solutions that attempt to bring together all these devices for bigger purpose. One such existing solution is the openHAB software stack, which the Eclipse SmartHome framework is part of. This subsection will look at both systems, explain their differences, and how they fit into this work. 
+The smart home is one of the many applications for the IoT. A refrigerator that sends an message to your phone when it no longer has any milk. An air conditioner that turns on whenever it becomes aware that the outside temperature is rising above thirty Celsius degrees. A speaker that plays music whenever you start cooking. These are just some of the possible scenarios that may occur inside a home with \emph{sensing} devices that are capable of interacting with each other. This is no longer a vision for the future or a secluded experiment. There are already several existing solutions that attempt to bring together all these devices for more ambitious purposes. One such existing solution is the openHAB software stack, which the Eclipse SmartHome framework is part of. This subsection will look at both systems, explain their differences, and how they fit into this work. 
 
 \subsubsection{openHAB}
+\label{sssec:oh}
+OpenHAB (OH) is a product that focuses on interoperability among all kinds of devices from different vendors. It accomplishes inter-device interaction through logical modules called \emph{bindings}. For example, a smart television from Samsung may not be able to interact with other devices out of box, but it may be able to do so if the appropriate binding is developed for the openHAB environment. OpenHAB, as it name implies, is an open-source software that serves as a \emph{hub} that brings together a diverse range of devices through the use of bindings. A binding makes a link to a thing that may be of either physical or logical nature. For instance, a light switch is undoubtedly a physical thing, and its state of being turned on or off is part of the data it exposes. Consider however, a weather service from the Internet that provides weather information such as temperature, humidity, and precipitation probability. This provider of data is undoubtedly not of physical nature, but still fits in the model of a smart home. Thus, a binding may incorporate such a weather service as a thing in the logical sense.
 
-OpenHAB (OH) is a product that focuses on interoperability among all kinds of devices from different vendors. It accomplishes the interaction through logical modules called \emph{bindings}. For example, a smart television from Samsung may not be able to interact with other devices out of box, but it may be able to do so if the appropriate binding is developed for the openHAB environment. OpenHAB, as it name implies, is an open-source software that serves as \emph{hub} that brings together a diverse range of devices through the use of bindings. A binding makes a link to a Thing that may be of either physical or logical nature. For instance, a light switch is undoubtedly a physical Thing, and its state of being turned on or off is part of the data it can make available. Consider however, a weather service from the Internet that provides weather information such as temperature, humidity, and precipitation probability. This provider of data is undoubtedly not of physical nature, but still fits properly into the model of a smart home. Thus, a binding may incorporate such a weather service as a Thing in the logical sense.
+Ironically, openHAB has been often been labeled as \emph{Intranet of Things} because of its ability to operate without a connection to the Internet~\cite{openhab_03}. In Intranet of Things, all the devices are contained within a Local Area Network (LAN), possibly behind a firewall, and thus locally controlled. Things connect to openHAB, whenever possible, instead of connecting to a remote server in the cloud. This is a particular characteristic of openHAB that attempts to solve vendor interoperability and minimize the risk of losing privacy.
 
-Ironically, openHAB has been often been labeled as \emph{Intranet of Things} because of its ability to operate without a connection to the Internet~\cite{openhab_03}. In Intranet of Things, all the devices are contained within a Local Area Network (LAN), possibly behind a firewall, and thus locally controlled. This is a particular characteristic of openHAB that attempts to solve vendor interoperability and minimize the risk of losing privacy.
-
-Even if it would only expose a single point of access to the Things in the smart home, it is not recommended to make an openHAB instance to the Internet. The main reason for this is that there is no authorization mechanism in place for alllowing or forbidding access for users. Thus, any individual that can access the openHAB instance is capable of doing any changes and viewing any piece of data, without any lock in place. Therefore, the damage is controlled by making the instance accessible only from inside the private network. Thus, the security is as strong as the security of network. An intruder gaining access to the network implies in gaining access to all of the openHAB capabilities, breaching the privacy and confidentiality of the data in use. 
-
-Two vastly different versions of openHAB currently exist. While the first version, openHAB1, still receives support, it is mainly the second version, openHAB2 (OH2), which is currently under development. openHAB2 was recently released in June 2017, and for this reason, many existing deployments are based in the first version~\cite{openhab_01}. Originally, the whole software stack of openHAB was a single product, i.e., openHAB1. It included functionality that is not even present yet in the second version, particularly partial access control and fine-grained configuration through files. Eventually, the project was made part of the Eclipse Foundation, and thus openHAB2 became the final, end-user solution that made use of several smaller projects, including the core framework for building smart homes: Eclipse SmartHome. For the rest this work, openHAB refers to the second version of the product, i.e., openHAB2.
+Two vastly different versions of openHAB currently exist. While the first version, openHAB1, still receives support, it is mainly the second version, openHAB2 (OH2), which is currently under development. openHAB2 was recently released in June 2017, and for this reason, many existing deployments are based on the first version~\cite{openhab_01}. Originally, the whole software stack of openHAB was a single product, i.e., openHAB1. It included functionality that is not even present yet in the second version, particularly partial access control and ample configuration options through text files. Eventually, the core functionality of the project was made part of the Eclipse Foundation as a framework to develop smart homes: Eclipse SmartHome. Simultaneously, openHAB2 became the final, end-user solution that made use of several smaller projects and frameworks, including Eclipse SmartHome. For the rest this work, openHAB refers to the second version of the product, i.e., openHAB2.
 
 Figure~\ref{fig:oh_architecture} shows the overall architecture of the openHAB automation software. It is developed in Java and its core is the Eclipse SmartHome framework. By using Apache Karaf and Eclipse Equinox it instantiates an OSGi runtime environment~\cite{openhab_02}. Jetty is deployed as the HTTP server where resources are exposed through the HTTP protocol. OpenHAB is highly extensible through the use of \emph{Add-ons}. Add-ons and extensions may be used to extend the existing user interface, or to provide the communication bridge with physical devices (bindings). Add-ons from the previous version may be used through a special module that performs the necessary adjustments. 
 
@@ -619,9 +617,9 @@ Figure~\ref{fig:oh_architecture} shows the overall architecture of the openHAB a
 
 As the core for the openHAB software stack, Eclipse SmartHome (ESH) provides a flexible and modularized framework for smart home and ambient assisted living solutions with a focus on heterogenous environments~\cite{esh_01}. The goal of ESH is to offer a solution for the fragmented market in smart home solutions by offering a medium where vendor-incompatible devices can be operated transparently.
 
-As in the first version of openHAB, the idea of a \emph{binding} is reused in ESH. Bindings implement a Thing-specific protocol e.g.\ ZigBee, and by loading the appropriate binding, the connection between the devices or services e.g., a TV set or weather service, and the framework, can be established. Furthermore, the bindings are connected to an \emph{event bus}, and this allows to do inter-component communication. Through the event bus, it is possible to send commands to the device or service, or else, to receive status updates from them.
+As in the first version of openHAB, the idea of a \emph{binding} is reused in ESH. Bindings implement a thing-specific protocol e.g.\ ZigBee, and by loading the appropriate binding, the connection between the devices or services e.g., a TV set or weather service, and the framework, can be established. Furthermore, the bindings are connected to an \emph{event bus}, and this allows to do inter-component communication. Through the event bus, it is possible to send commands to the device or service, or else to receive status updates from them.
 
-The architecture of ESH is detailed in figure~\ref{fig:esh_architecture}. In the figure, at least four Things are connected to the ESH framework through its respective bindings. There are two ways in which activity prompt changes in the Things connected: through a user interface (UI) and automation logic. The UI for ESH is made up of adaptable \emph{sitemaps} which comprise dynamic web pages, and this medium allows for manual interaction with the Things present in the system. The automation logic is established in terms of \emph{rules}, which are specified through configuration files. In both cases, commands may be directed to the event bus, which are then forwarded to its respective binding. Likewise, status updates may be shown in the UI, or served to the automation logic to perform more operations on top of these results. Finally, it is possible to make use of a custom logging module and console, mostly for development purposes.
+The architecture of ESH is detailed in figure~\ref{fig:esh_architecture}. In the figure, at least four things are connected to the ESH framework through its respective bindings. There are two ways in which activity prompt changes in the things connected: through a user interface (UI) and automation logic. The UI in ESH is made up of adaptable \emph{sitemaps} comprised of dynamic web pages, and this medium allows for interaction with the things through a web browser. The automation logic is established in terms of \emph{rules}, which are specified through configuration files. Additionally, there is also a REST API which is exposed through certain URIs, not shown in this figure. For all cases, commands may be directed to the event bus, which are then forwarded to its respective binding. Likewise, status updates may be shown in the UI, or served to the automation logic to perform more operations on top of these results. Finally, it is possible to make use of a custom logging module and console, mostly for development purposes.
 
 \begin{figure} [ht] 
 \begin{center}
@@ -704,7 +702,8 @@ As a first step towards analyzing the security of IoT models, architectures, and
 
 \subsection{Security of openHAB}
 \TODO{is it necessary to add screenshots of tcpdump or wireshark?}
-A binding is the logical piece of the system that links a \emph{thing} to openHAB. Through the User Interface or REST API calls, a user is able to view, and possibly modify the channels, i.e. values, of the things connected to the system. Temperature and humidity values, state of light switches, currently playing media, etc., are some examples of these channels. In the case of the least complex adversary, it may be assumed that it is possible to eavesdrop the incoming and outgoing data packets through the network. Thus, the first effort was to see how the data is moving around the system. Through the use of Wireshark and tcpdump, it was observed that the transit of data ocurred in two possible ways: through the cloud, or through the openHAB instance. Some devices, such as light switches, do not require to communicate with a server in the Internet to set or unset the state of the switch. As this may be done internally, the binding provides the means to operate the thing directly through the User Interface of openHAB. The other case involves devices which need to communicate to a remote server through the Internet to push its data. The binding, in this case, connects to the remote server through the use of proprietary API, and gets the data required from it. This is more evident in a logical thing, such as a weather service. The binding for the weather service connects to the server through an API to query data about temperature, humidity, etc., of a particular location.
+
+A binding is the logical piece of the system that links a \emph{thing} to openHAB. Through the User Interface or REST API calls, a user is able to view, and possibly modify the channels, i.e.\ values, of the things connected to the system. Temperature and humidity values, state of light switches, currently playing media, etc., are some examples of these channels. In the case of the least complex adversary, it may be assumed that it is possible to eavesdrop the incoming and outgoing data packets through the network. Thus, the first effort was to see how the data is moving around the system. Through the use of Wireshark and tcpdump, it was observed that the transit of data ocurred in two possible ways: through the cloud, or through the openHAB instance. Some devices, such as light switches, do not require to communicate with a server in the Internet to set or unset the state of the switch. As this may be done internally, the binding provides the means to operate the thing directly through the User Interface of openHAB. The other case involves devices which need to communicate to a remote server through the Internet to push its data. The binding, in this case, connects to the remote server through the use of proprietary API, and gets the data required from it. This is more evident in a logical thing, such as a weather service. The binding for the weather service connects to the server through an API to query data about temperature, humidity, etc., of a particular location.
 
 Delegating the data to a remote server was the first obstacle in the analysis of the security in openHAB. Because of simplifications in the literature about IoT, it is typically assumed that for the architecture of IoT applications (REFERENCE) there is no connection to the Internet to accomplish a task that may be performed locally. However, due to different vendors and a variety of devices, the actual solution tends to depend on a remote connection. For this reason, the security frameworks (REFERENCE) in the literature do not quite fit in this scenario. This does not cause worse security implications, however; the analysis should be more flexible in that case.
 
@@ -750,11 +749,15 @@ As hinted, the use of HTTPS in bindings is of great importance due to the underl
 \TODO{REFERENCES}
 An openHAB instance is typically installed on a small server, and could even be installed on a Raspberry Pi, deployed on some port, 8080 by default. Due to the configuration of openHAB, this port may only be accessed by end devices in the same wireless network. It has been asked countless times (REFERENCE) if it is possible to access the openHAB instance from the outside, that is: through the Internet. Exposing an application to the outside may be trivial from a functional standpoint, but it carries its own set of security risks. Denial-of-Service attacks, unrestricted URL access, injection, session hijacking, etc., are only some of the possibilities that could affect an application open to the Internet. These risks are well documented by projects such as the OWASP Top Ten (REFERENCE). In the case of openHAB particularly, an adversary does not need to explore too much before finding out an apparent vulnerability: the lack of authentication, and therefore, absence of access control.
 
-According to the openHAB documentation, secure remote access is a problem that has been considered for a long time, and thus, some solutions are available (REFERENCE). These solutions are mostly three: VPN connection, myopenHAB Cloud Service, and running openHAB behind a reverse proxy. Without going into specifics, the idea in all of them has something in common: to make the transmission channel as safe as possible to prevent any unauthorized party from making use of it. The logic behind it is very simple: since there is no authorization mechanism in place for openHAB, then any party that can access the instance has control over all its features. Thus, the security against adversaries is as strong as the the security of the channel is.
+As mentioned in Chapter~\ref{sssec:oh}, to preserve privacy it is recommended to keep the openHAB instance from being exposed to the Internet. This may satisfy a weak security requirement, but it limits the use cases for the smart home.For any smart home application it is desirable to have the possibility of secure remote access, e.g., from the office, and openHAB is no exception. For this reason, openHAB offers three options for secure remote access: VPN connection, myopenHAB Cloud Service, and running openHAB behind a reverse proxy~\cite{openhab_04}. The idea in all of these options has something in common: to make the transmission channel as safe as possible to prevent any unauthorized party from entering the private network. Although these options make secure remote access viable, any adversary that gains access to the private network ends up gaining full control over openHAB. Thus, the security against adversaries is as strong as the security of the channel.
+\TODO{MERGE BOTH PARAGRAPHS}
+Even by having openHAB as a single point of external access, it is not recommended to expose an openHAB instance to the Internet~\cite{openhab_03}. The main reason for this is that there is no authorization mechanism in place for alllowing or forbidding access for users. Thus, any individual that can access the openHAB instance is capable of altering the system state and retrieving any piece of data, as there is no lock in place. This threat is minimized by making the instance accessible only from inside the private network. Thus, the security is as strong as the security of network. An intruder gaining access to the network implies in gaining access to all of the openHAB capabilities, breaching the privacy and confidentiality of the data in use.
 
-Relying purely on the channel makes it impossible to make the openHAB instance \emph{open} to the Internet, as it is considered to  be a public and insecure medium. Note, however, that enforcing some kind of access control policy does not suffice to deem it safe against adversaries to open the instance to the Internet. The expected use for openHAB at the moment, however, takes the appearance of ``Intranet of Things'', as it cannot be accessed from the outside. A more interesting scenario would be to have two instances of openHAB communicating with each other to complement their functions with the data gathered separately.
 
-At a first glance, one would think that authentication and access control should be implemented and be responsibility of the end product, i.e. openHAB. It turns out, however, that as a core feature that involves restricting access to REST end points and servlet extensions, it is more apropriate to fit the authentication and authorization logic inside the Eclipse SmartHome core. As previously stated in section (REFERENCE), the Eclipse SmartHome is a subset of the openHAB distribution that holds the core functionalities of automation of sensing devices. Thus, access control, and inherently, authentication, became of interest to the Eclipse SmartHome community. 
+
+Relying purely on the communication channel makes it impossible to make the openHAB instance securely \emph{exposed} to the Internet, as it is considered to  be a public and insecure medium. Note, however, that enforcing some kind of access control policy does not suffice to deem it safe against adversaries to open the instance to the Internet. The expected use for openHAB at the moment, however, takes the appearance of ``Intranet of Things'', as it cannot be accessed from the outside. A more interesting scenario would be to have two instances of openHAB communicating with each other to complement their functions with the data gathered separately.
+
+At a first glance, one would think that authentication and access control should be implemented and be responsibility of the end product, i.e.\ openHAB. It turns out, however, that as a core feature that involves restricting access to REST end points and servlet extensions, it is more apropriate to fit the authentication and authorization logic inside the Eclipse SmartHome core. As previously stated in section (REFERENCE), the Eclipse SmartHome is a subset of the openHAB distribution that holds the core functionalities of automation of sensing devices. Thus, access control, and inherently, authentication, became of interest to the Eclipse SmartHome community. 
 
 \subsection{Community Discussion on Role-Based Access Control}
 \label{ssec:discussion}
@@ -792,7 +795,7 @@ As a product of the discussion at the time, the Eclipse Smarthome community crea
 
 In an attempt to identify which were the the aspects that more resembled requirements with respect to security, rather than management of resources, \emph{misuse cases} were written according to the state of the Eclipse Smarthome at the time. Thus, the provided requirements document included the \emph{use cases} that served as a basis to identify the \emph{misuse cases}. 
 
-Miuse cases, as the name suggests, is meant to cause the opposite consequence of a typical use case. That is, instead of designing the system to cover a certain functionality, the intention is to pinpoint which functionalities or \emph{actions} should not be permitted in the ideal system (REFERENCE). A misuse case diagram shows mis-actors, i.e. adversaries, initiating misuse cases to cause some anomaly by taking advantage of legitimate use cases.
+Miuse cases, as the name suggests, is meant to cause the opposite consequence of a typical use case. That is, instead of designing the system to cover a certain functionality, the intention is to pinpoint which functionalities or \emph{actions} should not be permitted in the ideal system (REFERENCE). A misuse case diagram shows mis-actors, i.e.\ adversaries, initiating misuse cases to cause some anomaly by taking advantage of legitimate use cases.
 
 Often, it is not obvious to detect misuse cases, as there are many angles and attack vectors that may go unnoticed to everyone but the adversary. Thus, it becomes more of a ``brainstorming'' exercise to attempt to detect possible threats, and an initial response to mitigate them. In this case, misuse cases were written to find out which threats could be posed by adversaries, and how these could be mitigated.
 
@@ -859,7 +862,7 @@ Figure \ref{fig:esh_auth_arch} shows at a very high level the underlying archite
 \end{center}
 \end{figure}
 
-Initial results by the community (REFERENCE) showed that it was indeed possible to make the \texttt{HttpContext} shared by the components that needed access control. Taking these results into account, work in the direction of a \emph{custom} \texttt{HttpContext} started. For this, the merged \texttt{HttpContext} will require the existence of an authenticator, i.e. a module that performs the authentication logic, and thereafter the module that performs authorization. Figure \ref{fig:esh_arch_authenticator} shows how the authenticator is merely a black box that may choose to perform a certain kind of authetnication according to the circumstance. The decision is based on the received HTTP request: depending on whether it has an authorization header, and if it does, which kind of authentication it intends to perform, or otherwise if there is a session identifier (cookie) present. Implementation details for the basic and JWT authenticators are introduced in subsection \ref{ssec:impl}. Form authentication is left as future work. 
+Initial results by the community (REFERENCE) showed that it was indeed possible to make the \texttt{HttpContext} shared by the components that needed access control. Taking these results into account, work in the direction of a \emph{custom} \texttt{HttpContext} started. For this, the merged \texttt{HttpContext} will require the existence of an authenticator, i.e.\ a module that performs the authentication logic, and thereafter the module that performs authorization. Figure \ref{fig:esh_arch_authenticator} shows how the authenticator is merely a black box that may choose to perform a certain kind of authetnication according to the circumstance. The decision is based on the received HTTP request: depending on whether it has an authorization header, and if it does, which kind of authentication it intends to perform, or otherwise if there is a session identifier (cookie) present. Implementation details for the basic and JWT authenticators are introduced in subsection \ref{ssec:impl}. Form authentication is left as future work. 
 
 \begin{figure} [ht] 
 \begin{center}
@@ -940,7 +943,7 @@ To handle the creation and verification of JWT, a third library, Nimbus, was use
 
 Code for the verification of the JWT is omitted as it follows a very similar logic to JWT generation and signing, but in reverse order. This implies de-serializing the JWT, loading the RSA public key into some object, verifying JWT using said object, and finally extracting username and claims. In the implementation, the username need not be extracted, as it is guaranteed that the claims are valid, given that the signature is valid.
 
-As mentioned, the RSA key is generated at runtime once. Originally, this was meant to merely be a placeholder for a pre-existing RSA key that is present in the distribution of openHAB for SSH access. This pre-existing RSA key is stored in a file \texttt{keys.properties} under the \texttt{etc/} directory of the installation path of openHAB. However, it turned out that some problems emerged from this idea. First, the pre-existing RSA key was disabled, i.e. commented, as a security precaution. Secondly, the key is only generated as part of running the Karaf container inside the openHAB distribution. As Karaf is not included within the Eclipse SmartHome distribution, there is no pre-existing key. For the first problem, it would be enough to have the openHAB administrator generate a fresh key pair and store the public and private keys. However, this is not exactly user-friendly, and thus becomes a problem in terms of security usability.  A possible solution to the second problem is to leave key generation to the \texttt{auth} bundle and store it in some file in the local filesystem. When the bundle is activated it will first look for the file before attempting to generate a new RSA key. As the discussion within the community has not gotten to this point, the implementation has maintained the idea of storing the RSA key in memory during runtime. It should not cause problems and, in case that the bundle is restarted, then due to invalid JWTs, credentials will be requested again.
+As mentioned, the RSA key is generated at runtime once. Originally, this was meant to merely be a placeholder for a pre-existing RSA key that is present in the distribution of openHAB for SSH access. This pre-existing RSA key is stored in a file \texttt{keys.properties} under the \texttt{etc/} directory of the installation path of openHAB. However, it turned out that some problems emerged from this idea. First, the pre-existing RSA key was disabled, i.e.\ commented, as a security precaution. Secondly, the key is only generated as part of running the Karaf container inside the openHAB distribution. As Karaf is not included within the Eclipse SmartHome distribution, there is no pre-existing key. For the first problem, it would be enough to have the openHAB administrator generate a fresh key pair and store the public and private keys. However, this is not exactly user-friendly, and thus becomes a problem in terms of security usability.  A possible solution to the second problem is to leave key generation to the \texttt{auth} bundle and store it in some file in the local filesystem. When the bundle is activated it will first look for the file before attempting to generate a new RSA key. As the discussion within the community has not gotten to this point, the implementation has maintained the idea of storing the RSA key in memory during runtime. It should not cause problems and, in case that the bundle is restarted, then due to invalid JWTs, credentials will be requested again.
 
 The rest of the implementation follows the authentication logic for the basic and token-based types. The code is currently maintained as a fork of the Eclipse SmartHome project (REFERENCE).
   
